@@ -33,6 +33,7 @@ if __name__ == "__main__":
 
 #stdlib
 import os
+import pwd
 import xmlrpclib
 
 from conary.repository import errors
@@ -342,10 +343,33 @@ def realMain(cfg, argv=sys.argv):
         # the main conary command in the common case.  This lets
         # conary run even if, for example, libelf is missing
         from conary.build import cook
-	log.setVerbosity(log.DEBUG)
+	log.setVerbosity(log.INFO)
 
+        if not os.getuid():
+            cookUser = cfg.emergeUser
+            if not cookUser:
+                log.error('Please set emergeUser config '
+                          'item before emerging')
+                return 1
+            try:
+                info = pwd.getpwnam(cookUser)
+            except KeyError:
+                log.error("No user named '%s' to emerge with.  Please check "
+                          "the 'emergeUser' config item." % cookUser)
+                return 1
+            cookIds = (info.pw_uid, info.pw_gid)
+        else:
+            cookIds = None
+
+        ignoreDeps = argSet.pop('no-deps', False)
 	if argSet: return usage()
-	cook.cookCommand(cfg, otherArgs[2:], False, {}, emerge = True)
+
+        try:
+            return cook.cookCommand(cfg, otherArgs[2:], False, {}, emerge = True,
+                                    cookIds=cookIds, ignoreDeps=ignoreDeps)
+        except cook.CookError, msg:
+            log.error(msg)
+            return 1
     elif (otherArgs[1] == "localcs"):
 	if len(otherArgs) != 4 and len(otherArgs) != 4:
 	    return usage()
